@@ -71,6 +71,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Changed the way digest_footer is added to the RFC 1153 (plain) format
+      digest for RFC compliance.  Bug #887610.
+
     - Fixed cron/checkdbs to report unsubscriptions waiting approval.
       Bug #873821.
 
